Updated font awesome

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <!--Fonts-->
-    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="fontawesome/font-awesome.min.css" rel="stylesheet">
   </head>
 
   <body>
