--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div id="separator" class="container"></div>
       <header id="header" class="container">
         <div id="title" class="row">
-          <img src="images/logo.png" id="header-name" class="col-xs-10 col-sm-6"></img>
+          <img src="images/Logo.png" id="header-name" class="col-xs-10 col-sm-6"></img>
 
           <div class="icon-menu">
             <i class="fa fa-bars"></i>
